# uerl_p

./: .gitignore  Dockerfile  README.md  setup.sh
RLExamples/: .gitignore  RLExamples.uproject
RLExamples/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
RLExamples/Source/: RLExamples.Target.cs  RLExamplesEditor.Target.cs
epic_demo/: apples_advanced_example.py  apples_editor_cpu_render.py  apples_editor_simple.py  apples_editor_simple_multiple_workers.py  apples_editor_simple_validation.py  env_interaction.ipynb  gpu_render.ipynb
kubernetes/: example_cpu_worker.Dockerfile  example_gpu_worker.Dockerfile  minio-server.yaml  private-registry.yaml
python/uerl/: pyproject.toml
python/uerl/src/uerl/: configs.py  renderer.py  renderer_utils.py  requests.py  types.py  ue_gym_env.py  ue_runner.py  utils.py
python/uerl/src/uerl/agent/: agent_base.py
python/uerl/src/uerl/components/: component_base.py
python/uerl/src/uerl/components/actuators/: drone_actuator.py  robot_actuator.py
python/uerl/src/uerl/components/infos/: camera_spectator_info.py
python/uerl/src/uerl/components/rewarders/: on_hit_rewarder.py  pickup_rewarder.py  target_distance_rewarder.py  world_direction_rewarder.py
python/uerl/src/uerl/components/sensors/: camera_sensor.py  distance_tracer_sensor.py  location_sensor.py  rotation_sensor.py  velocity_sensor.py
python/uerl/src/uerl/components/terminators/: actors_of_class_finished_terminator.py  on_hit_terminator.py  step_counter_terminator.py
python/uerl/src/uerl/models/: my_impala_model.py  racing_model.py
(+149 files in other folders)
